Fix Bookmarks Spacing

--- a/SCSS/Theme Rewrite/plugins-core/_bookmarks.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_bookmarks.scss
@@ -8,6 +8,7 @@
     }
     &.tree-item-self { 
         gap: 4px; 
+        padding: var(--explorer-item-padding);
         
         & > .tree-item-icon { margin-left: -7px; }
     }
